ingress/lab/guestbook-svc-7-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-7-1
spec:
  selector:
    app: guestbook-7-1
  ports:
    - port: 8080
      targetPort: 8080
